update: fix progress bar too high up invisible

--- a/css_includes/DashedSentence.css
+++ b/css_includes/DashedSentence.css
@@ -4,7 +4,7 @@
     line-height: 1.5;
     justify-content: center;
     margin: auto;
-    width: 1300px;
+    width: 2000px;
     margin-top: 10%;
 }
 .ospan {
